--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "Scripbox-new",
+    "name": "scripbox",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "json:server": "json-server --watch products.json"
+        "json:server": "json-server --watch products.json",
+        "start": "node server.js",
+        "heroku-postbuild": "ng build --prod"
     },
     "private": true,
     "dependencies": {
@@ -49,5 +50,9 @@
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
         "typescript": "~3.4.3"
+    },
+    "engines": {
+        "node": "14.17.3",
+        "npm": "8.6.0"
     }
 }
