--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint": "ng lint",
         "e2e": "ng e2e",
         "json:server": "json-server --watch products.json",
-        "start": "node server.js",
+        "start": "ng serve",
         "heroku-postbuild": "ng build --prod"
     },
     "private": true,
